Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
         <h3>WRITTEN BY...</h3>
 
         <!-- pararaph text 'PUBLISHED BY...' -->
-        <p>
-          
-        </p>
+        <p>PUBLISHED BY...</p>
+        
 
         <!-- span text 'PHARRELLWILLIAMS.COM' -->
 
