--- a/index.html
+++ b/index.html
@@ -41,8 +41,10 @@
         <span>PHARRELLWILLIAMS.COM</span>
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
+        <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png" alt="Alternative Text">
 
         <!-- span text 'COLUMBIARECORDS.COM' -->
+        <span>COLUMBIARECORDS</span>
 
         <br>
 
