Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png" alt="Alternative Text">
 
         <!-- span text 'COLUMBIARECORDS.COM' -->
-        <span>COLUMBIARECORDS</span>
+        <span>COLUMBIARECORDS.COM</span>
 
         <br>
 
